Fix global return position in eslint rules

--- a/js/.eslintrc
+++ b/js/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "rules": {
         "no-restricted-modules": [
             "error",
