Add spellcheck ignores

--- a/.eslintrc
+++ b/.eslintrc
@@ -170,9 +170,9 @@
                     checkboxes,
                     codomain,
                     coef,
-                    coefs,
                     coeff,
                     coeffs,
+                    coefs,
                     colgroup,
                     colgroups,
                     colorizer,
@@ -316,6 +316,8 @@
                     pathname,
                     pdf,
                     penult,
+                    pinchend,
+                    pinchstart,
                     polyline,
                     polymorph,
                     polynom,
@@ -336,8 +338,10 @@
                     radian,
                     radians,
                     radiuses,
+                    rangebar,
                     readdir,
                     rect,
+                    rectangleneedle,
                     rects,
                     registrator,
                     reinit,
@@ -357,6 +361,8 @@
                     rgb,
                     rgba,
                     roadmap,
+                    rotateend,
+                    rotatestart,
                     rowspan,
                     rowspans,
                     scalebar,
@@ -398,19 +404,27 @@
                     tabindex,
                     tbody,
                     templated,
+                    textcloud,
+                    tfoot,
                     thead,
                     timeline,
                     timestamp,
                     timezones,
                     titleize,
-                    tfoot,
                     tmp,
                     tmpl,
                     toolbars,
                     tooltip,
                     tooltips,
                     transclude,
+                    transformend,
+                    transformstart,
+                    translateend,
+                    translatestart,
                     treeview,
+                    trianglemarker,
+                    triangleneedle,
+                    twocolorneedle,
                     uid,
                     uint,
                     unary,
@@ -449,6 +463,8 @@
                     xhr,
                     xml,
                     xmlns
+                    zoomend,
+                    zoomstart
                 ]
             }
         ]
